--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Joel Kuehl</title>
         <script type="module" src="/MyWebsite/js/header_footer.js"></script>
-        <link rel="stylesheet" href="https://github.com/Joelk97/MyWebsite/tree/main/css/style_head_foot.css">
+        <link rel="stylesheet" href="https://Joelk9.github.io/style_head_foot.css">
     </head>
     <body>
         <my-header></my-header>
