--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html>
     <head>
         <title>Joel Kuehl</title>
-        <script type="module" src="/js/header_footer.js"></script>
-        <link rel="stylesheet" href="/css/style_head_foot.css">
+        <script type="module" src="js/header_footer.js"></script>
+        <link rel="stylesheet" href="css/style_head_foot.css">
     </head>
     <body>
         <my-header></my-header>
         <div class="section section-me">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut urna nec ex posuere sodales. Nam condimentum eu nibh porta aliquam. Maecenas eget quam in dui lacinia aliquam vel id enim. 
-                Vivamus ac est scelerisque, sagittis metus eget, mollis lorem. Sed ullamcorper sem at magna vestibulum, eu porta elit interdum. Nulla facilisi. Integer in gravida turpis. 
-                Nullam a augue hendrerit, ultrices nunc et, porttitor diam. Nunc fringilla at quam quis congue. Sed vitae quam scelerisque, facilisis leo a, sodales leo.
-                Fusce ornare eros nec odio commodo aliquet. Sed pretium id lectus sit amet facilisis. Fusce venenatis tortor eu suscipit gravida. Duis sed luctus ipsum, vitae faucibus libero. 
-                Pellentesque ullamcorper vulputate viverra. Nullam placerat rutrum urna sed posuere. Phasellus tempus vulputate turpis, porta iaculis elit semper id. 
-                Nullam sit amet risus facilisis, rhoncus lorem ac, rhoncus libero. Cras aliquam neque euismod lectus accumsan maximus. 
-                Integer dictum, ex id ultricies imperdiet, sem mauris suscipit risus, a dignissim lacus arcu et tellus. In consequat ipsum fermentum efficitur sagittis. 
-                In convallis erat metus, id sollicitudin mi porttitor sit amet. Quisque tincidunt mollis massa quis facilisis. Suspendisse fringilla dui ex, vitae interdum nulla vestibulum eget.
-                Fusce auctor mollis pharetra. Morbi feugiat et mi ut fringilla. Vivamus hendrerit aliquet erat sed accumsan. 
-                Mauris eu pretium nulla, quis vestibulum sem. Nulla pretium nibh ex, at euismod nulla convallis ac. Donec at dolor id dui elementum accumsan. Fusce justo velit, gravida vel egestas sit amet, efficitur a nisl.
-                Praesent pharetra fermentum efficitur. Praesent maximus velit ac nunc tempor, posuere sodales nulla euismod. Mauris semper eleifend elementum. Phasellus in ullamcorper odio, in convallis nunc. 
-                Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
-            </p>
+            <h2 class="subtitles">About me</h2>
+            <div class="section-me-desc">
+                <div class="section-me-text">
+                    <p>
+                        Hi, I'm joel, a mechanical engineer from Switzerland. <br>
+                        I am currently doing my community service at the Fribourg University of Applied Sciences (HEIA), as a scientific associate. <br>
+                        During my training years I gained experience in product development in the area of tool holders and robot accessories and in creating software in the area of process optimization. <br>
+                        I am currently delving into the world of web development, web design, and generally into Python and JavaScript programming. <br>
+                        In my spare time I spend many hours riding my road bike.
+                    </p>
+                </div>
+                <div class="section-me-img">
+                    <img src="/img/viso jo simply.png">
+                </div>
+            </div>
         </div>
         <div class="section section-projects">
             <p>
