--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </p>
                 </div>
                 <div class="section-me-img">
-                    <img src="/img/viso jo simply.png">
+                    <img src="img/viso jo simply.png">
                 </div>
             </div>
         </div>
