--- a/about.html
+++ b/about.html
@@ -4,8 +4,19 @@
         <title>Joel Kuehl</title>
         <script type="module" src="js/header_footer.js"></script>
         <link rel="stylesheet" href="css/style_head_foot.css">
+        <link rel="stylesheet" href="css/styles_body.css">
     </head>
     <body>
         <my-header></my-header>
+        <div class="section-me-text">
+            <p>
+                Hi, I'm joel, a mechanical engineer from Switzerland. <br>
+                I am currently doing my community service at the Fribourg University of Applied Sciences (HEIA), as a scientific associate. <br>
+                During my training years I gained experience in product development in the area of tool holders and robot accessories and in creating software in the area of process optimization. <br>
+                I am currently delving into the world of web development, web design, and generally into Python and JavaScript programming. <br>
+                In my spare time I spend many hours riding my road bike.
+            </p>
+        </div>
+        <my-footer></my-footer>
     </body>
 </html>
