--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/styles_body.css">
     </head>
-    <body>
+    <body class="Site">
         <my-header></my-header>
+        <main class="Site-content">
         <div class="section-me-text">
             <p>
                 Hi, I'm joel, a mechanical engineer from Switzerland. <br>
@@ -17,6 +18,7 @@
                 In my spare time I spend many hours riding my road bike.
             </p>
         </div>
+    </main>
         <my-footer></my-footer>
     </body>
 </html>
