--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         
         
     </head>
-    <body>
+    <body class="Site">
         <my-header></my-header>
+        <main class="Site-content">
         <div class="section section-me">
             <h2 class="subtitles">About me</h2>
             <div class="section-me-desc">
@@ -65,6 +66,7 @@
                 Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
             </p>
         </div>
+        </main>
         <my-footer></my-footer>
     </body>
 </html>
