--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 Praesent pharetra fermentum efficitur. Praesent maximus velit ac nunc tempor, posuere sodales nulla euismod. Mauris semper eleifend elementum. Phasellus in ullamcorper odio, in convallis nunc. 
                 Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
             </p>
+            <a href="/salsa.html"><p>salsa</h3></p>
         </div>
         </main>
         <my-footer></my-footer>
