--- a/salsa.html
+++ b/salsa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+   
     <head>
         <link rel="stylesheet" href="css/style_salsa.css">
     </head>
@@ -7,10 +8,10 @@
         <header></header>
         <main class="site-content">
             <div class="spazio-attivita">
-
+                <div class="titolo-attivita titolo"><h1>Attività</h1></div>
             </div>
             <div class="spazio-shop">
-                <div class="titolo-shop"><h1>Online Shop</h1></div>
+                <div class="titolo-shop titolo"><h1>Online Shop</h1></div>
                 <div class="spazio-articoli">
                     <div class="articolo">
                         <div class="foto-articolo"><img src="img/salsa/prodotto1.png" alt=""></div>
