--- a/about.html
+++ b/about.html
@@ -5,20 +5,35 @@
         <script type="module" src="js/header_footer.js"></script>
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/styles_body.css">
+        <link rel="stylesheet" href="css/style_about.css">
     </head>
     <body class="Site">
         <my-header></my-header>
         <main class="Site-content">
-        <div class="section-me-text">
-            <p>
-                Hi, I'm joel, a mechanical engineer from Switzerland. <br>
-                I am currently doing my community service at the Fribourg University of Applied Sciences (HEIA), as a scientific associate. <br>
-                During my training years I gained experience in product development in the area of tool holders and robot accessories and in creating software in the area of process optimization. <br>
-                I am currently delving into the world of web development, web design, and generally into Python and JavaScript programming. <br>
-                In my spare time I spend many hours riding my road bike.
-            </p>
-        </div>
-    </main>
+            <div class="container-about">
+                <div class="about-section intro">
+                    <h2>About me</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut urna nec ex posuere sodales. Nam condimentum eu nibh porta aliquam. Maecenas eget quam in dui lacinia aliquam vel id enim. 
+                        Vivamus ac est scelerisque, sagittis metus eget, mollis lorem. Sed ullamcorper sem at magna vestibulum, eu porta elit interdum. Nulla facilisi. Integer in gravida turpis. 
+                        Nullam a augue hendrerit, ultrices nunc et, porttitor diam. Nunc fringilla at quam quis congue. Sed vitae quam scelerisque, facilisis leo a, sodales leo.
+                        Fusce ornare eros nec odio commodo aliquet. Sed pretium id lectus sit amet facilisis. Fusce venenatis tortor eu suscipit gravida. Duis sed luctus ipsum, vitae faucibus libero. 
+                        Pellentesque ullamcorper vulputate viverra. Nullam placerat rutrum urna sed posuere. Phasellus tempus vulputate turpis, porta iaculis elit semper id. 
+                        Nullam sit amet risus facilisis, rhoncus lorem ac, rhoncus libero. Cras aliquam neque euismod lectus accumsan maximus. 
+                    </p>
+                </div>
+                <div class="about-section cv">
+                    <h2>CV</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut urna nec ex posuere sodales. Nam condimentum eu nibh porta aliquam. Maecenas eget quam in dui lacinia aliquam vel id enim. 
+                        Vivamus ac est scelerisque, sagittis metus eget, mollis lorem. Sed ullamcorper sem at magna vestibulum, eu porta elit interdum. Nulla facilisi. Integer in gravida turpis. 
+                        Nullam a augue hendrerit, ultrices nunc et, porttitor diam. Nunc fringilla at quam quis congue. Sed vitae quam scelerisque, facilisis leo a, sodales leo.
+                        Fusce ornare eros nec odio commodo aliquet. Sed pretium id lectus sit amet facilisis. Fusce venenatis tortor eu suscipit gravida. Duis sed luctus ipsum, vitae faucibus libero. 
+                        Pellentesque ullamcorper vulputate viverra. Nullam placerat rutrum urna sed posuere. Phasellus tempus vulputate turpis, porta iaculis elit semper id. 
+                        Nullam sit amet risus facilisis, rhoncus lorem ac, rhoncus libero. Cras aliquam neque euismod lectus accumsan maximus.
+                    </p>
+                </div>
+            </div>
+        </main>
         <my-footer></my-footer>
     </body>
 </html>
