--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Praesent pharetra fermentum efficitur. Praesent maximus velit ac nunc tempor, posuere sodales nulla euismod. Mauris semper eleifend elementum. Phasellus in ullamcorper odio, in convallis nunc. 
                 Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
             </p>
-            <a href="https://eloquent-haupia-fe2eee.netlify.app" class="button-more"><p>Self driving car</p></a>
+            <a href="https://joelkuehlsselfdrivingcar.netlify.app/" class="button-more"><p><u></u>Self driving car</u></p></a>
         </div>
         <div class="section section-websites">
             <h2 class="subtitles">Websites</h2>
@@ -66,7 +66,7 @@
                 Praesent pharetra fermentum efficitur. Praesent maximus velit ac nunc tempor, posuere sodales nulla euismod. Mauris semper eleifend elementum. Phasellus in ullamcorper odio, in convallis nunc. 
                 Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
             </p>
-            <a href="salsa.html"><p>salsa</p></a>
+            <a href="salsa.html" class="button-more"><p>salsa</p></a>
         </div>
         </main>
         <my-footer></my-footer>
