--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Joel Kuehl</title>
+        <title>Joel Kuehl | About</title>
         <script type="module" src="js/header_footer.js"></script>
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/styles_body.css">
