--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         </div>
         <div class="section section-projects">
             <h2 class="subtitles" style="color: rgba(242, 242, 242);">Projects</h2>
+            <div class="section-project-cont">
+                <img src="img/projects_image.svg">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut urna nec ex posuere sodales. Nam condimentum eu nibh porta aliquam. Maecenas eget quam in dui lacinia aliquam vel id enim. 
                 Vivamus ac est scelerisque, sagittis metus eget, mollis lorem. Sed ullamcorper sem at magna vestibulum, eu porta elit interdum. Nulla facilisi. Integer in gravida turpis. 
@@ -41,13 +43,9 @@
                 Fusce ornare eros nec odio commodo aliquet. Sed pretium id lectus sit amet facilisis. Fusce venenatis tortor eu suscipit gravida. Duis sed luctus ipsum, vitae faucibus libero. 
                 Pellentesque ullamcorper vulputate viverra. Nullam placerat rutrum urna sed posuere. Phasellus tempus vulputate turpis, porta iaculis elit semper id. 
                 Nullam sit amet risus facilisis, rhoncus lorem ac, rhoncus libero. Cras aliquam neque euismod lectus accumsan maximus. 
-                Integer dictum, ex id ultricies imperdiet, sem mauris suscipit risus, a dignissim lacus arcu et tellus. In consequat ipsum fermentum efficitur sagittis. 
-                In convallis erat metus, id sollicitudin mi porttitor sit amet. Quisque tincidunt mollis massa quis facilisis. Suspendisse fringilla dui ex, vitae interdum nulla vestibulum eget.
-                Fusce auctor mollis pharetra. Morbi feugiat et mi ut fringilla. Vivamus hendrerit aliquet erat sed accumsan. 
-                Mauris eu pretium nulla, quis vestibulum sem. Nulla pretium nibh ex, at euismod nulla convallis ac. Donec at dolor id dui elementum accumsan. Fusce justo velit, gravida vel egestas sit amet, efficitur a nisl.
-                Praesent pharetra fermentum efficitur. Praesent maximus velit ac nunc tempor, posuere sodales nulla euismod. Mauris semper eleifend elementum. Phasellus in ullamcorper odio, in convallis nunc. 
-                Nulla facilisi. Sed a arcu blandit, molestie sem sed, tempus magna. Maecenas eget ante quis mauris accumsan consequat nec quis enim.
             </p>
+            
+        </div>
             <p style="font-size: 18px;"><a style="text-decoration-color:rgba(242, 242, 242); color: rgba(242, 242, 242)" href="projects.html" class="button-more">More</a></p>
         </div>
         <div class="section section-websites">
