--- a/about.html
+++ b/about.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/styles_body.css">
         <link rel="stylesheet" href="css/style_about.css">
+        <link rel="stylesheet" href="css/transitions.css">
     </head>
     <body class="Site">
+        <div class="transition transition-1 is-active"></div>
         <my-header></my-header>
         <main class="Site-content">
             <div class="container-about">
@@ -34,6 +36,7 @@
                 </div>
             </div>
         </main>
+        <script src="js/main.js"></script>
         <my-footer></my-footer>
     </body>
 </html>
