--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <script type="module" src="js/header_footer.js"></script>
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/styles_body.css">
+        <link rel="stylesheet" href="css/transitions.css">
         
         
     </head>
     <body class="Site">
+        <div class="transition transition-1 is-active"></div>
         <my-header></my-header>
         <main class="Site-content">
         <div class="section section-me">
@@ -67,6 +69,7 @@
             <p style="font-size: 18px;"><a href="salsa.html" class="button-more">salsa</a></p>
         </div>
         </main>
+        <script src="js/main.js"></script>
         <my-footer></my-footer>
     </body>
 </html>
