--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,12 @@
         <link rel="stylesheet" href="css/style_head_foot.css">
         <link rel="stylesheet" href="css/style_projects.css">
         <link rel="stylesheet" href="css/styles_body.css">
+        <link rel="stylesheet" href="css/transitions.css">
         <meta charset="utf-8" />
 
     </head>
     <body class="Site">
+        <div class="transition transition-1 is-active"></div>
         <my-header></my-header>
         <main class="Site-content grid-container">
             <div id="project1" class="small-grid grid-item project1"><h2>Self driving car AI</h2><p>The firt project I want to present is a little artificial intelligence, that I created during the JavaScript trainig.
@@ -24,7 +26,8 @@
             <div id="project5" class="grid-item project5"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro nemo earum asperiores, atque non laudantium minus dicta modi, officiis voluptates excepturi iusto, natus dolore doloremque? Cupiditate sit incidunt perferendis minima quibusdam aspernatur quidem eum, officiis magnam. Illum dolorum nemo autem nisi explicabo alias deserunt error commodi asperiores, enim placeat rerum omnis deleniti reprehenderit tempore a excepturi repudiandae laborum nihil officia voluptatum tenetur dolorem, sed provident! Labore facilis tempore deserunt cumque natus excepturi doloremque, tenetur ipsum aperiam. Eaque atque excepturi voluptate, nesciunt nulla ad distinctio dolore illum sed illo veritatis at sint quisquam vitae dolorum labore explicabo possimus consequatur rem corporis, quia assumenda, debitis quidem. Explicabo fugiat fugit optio neque? Consequatur consectetur sequi eveniet eius voluptates laborum officiis, mollitia autem ut sint vero iste quam velit, sit qui cum eligendi nobis. Minima eaque ducimus id commodi fuga magnam reprehenderit sint ratione maiores tempore magni, aperiam laborum enim atque laudantium nulla rem?</p></div>
             <div id="project6" class="grid-item project6"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro nemo earum asperiores, atque non laudantium minus dicta modi, officiis voluptates excepturi iusto, natus dolore doloremque? Cupiditate sit incidunt perferendis minima quibusdam aspernatur quidem eum, officiis magnam. Illum dolorum nemo autem nisi explicabo alias deserunt error commodi asperiores, enim placeat rerum omnis deleniti reprehenderit tempore a excepturi repudiandae laborum nihil officia voluptatum tenetur dolorem, sed provident! Labore facilis tempore deserunt cumque natus excepturi doloremque, tenetur ipsum aperiam. Eaque atque excepturi voluptate, nesciunt nulla ad distinctio dolore illum sed illo veritatis at sint quisquam vitae dolorum labore explicabo possimus consequatur rem corporis, quia assumenda, debitis quidem. Explicabo fugiat fugit optio neque? Consequatur consectetur sequi eveniet eius voluptates laborum officiis, mollitia autem ut sint vero iste quam velit, sit qui cum eligendi nobis. Minima eaque ducimus id commodi fuga magnam reprehenderit sint ratione maiores tempore magni, aperiam laborum enim atque laudantium nulla rem?</p></div>
             <script src="js/3dimensional.js"></script>
-        </main>        
+        </main>
+        <script src="js/main.js"></script>        
         <my-footer></my-footer>
         
     </body>
